<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_margin="8dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="360dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/athleteImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"
            app:strokeWidth="1dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/athleteNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:letterSpacing="0.02"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/athleteImageView"
            app:layout_constraintTop_toTopOf="@id/athleteImageView"
            tools:text="Vladislav Sotin" />

        <TextView
            android:id="@+id/dateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_lightning"
            android:letterSpacing="0.02"
            android:textColor="@color/gray"
            android:textSize="10sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/athleteImageView"
            app:layout_constraintTop_toTopOf="@id/athleteNameTextView"
            tools:text="Today 15:09" />

        <TextView
            android:id="@+id/activityNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.02"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/athleteImageView"
            tools:text="Run1" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/distanceTextView"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/distanceCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@+id/distanceTextView"
            app:layout_constraintStart_toStartOf="@+id/distanceTextView"
            tools:text="5 km" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/timeTextView"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/distanceTextView" />

        <TextView
            android:id="@+id/timeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@+id/timeTextView"
            app:layout_constraintStart_toStartOf="@+id/timeTextView"
            tools:text="1h" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/typeTextView"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/timeTextView" />

        <TextView
            android:id="@+id/typeValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@+id/typeTextView"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            tools:text="Run" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="130dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="The best app for cyclists and runners!"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline2" />

        <ImageView
            android:id="@+id/share_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:srcCompat="@drawable/ic_share_activity" />

        <ImageView
            android:id="@+id/typeImageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:srcCompat="@drawable/run" />


        <ImageView
            android:id="@+id/smallLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/timeTextView"
            app:layout_constraintStart_toEndOf="@+id/distanceTextView"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_line_small" />

        <ImageView
            android:id="@+id/smallLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/typeTextView"
            app:layout_constraintStart_toEndOf="@+id/timeTextView"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_line_small" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>